--- a/project/styles.css
+++ b/project/styles.css
@@ -11,9 +11,15 @@ body {
 }
 
 .navbar {
-  background-color: #f7f4f4;
-  color: #130101;
-  padding: 15px;
+  position: fixed; /* Fixes the navbar at the top */
+  top: 0; /* Ensures it's at the very top */
+  left: 0; /* Aligns it to the left */
+  width: 100%; /* Makes it span the full width of the page */
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white; /* Text color */
+  padding-top: 0;
+  padding-bottom: 40px;
+ 
 }
 
 .nav-links {
@@ -32,14 +38,33 @@ body {
 }
 
 .hero-section {
-  background-color: #0056b3;
-  color: #fff;
+  background-color: #9eaab6;
+  background-image:url(image.webp);
   text-align: center;
   padding: 200px 20px;
+  margin-top: 0px;
+  max-width: 100vw;
+  overflow: hidden;
+  height: 500px;
+  
+  
+}
+
+.subheading {
+  color: #f1f2f6;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
 .hero-content h1 {
-  font-size: 3rem;
+  font-size: 135px;
+  color: aliceblue;
+  font-style:sans-serif;
+  line-height: 80%;
+  overflow: visible;
+  margin-bottom: 0;
+  font-weight: 900;
 }
 
 .about-section {
@@ -64,4 +89,19 @@ p {
   font-size: 1rem;
   line-height: 1.8;
   margin-bottom: 20px;
+}
+
+
+.section-1-copy {
+  filter: saturate(115%);
+  background-color: #f2f2f2;
+  background-image: url(https://cdn.prod.website-files.com/6418039…/64ba497…_Frame%2034.webp);
+  background-position: 50%;
+  background-size: cover;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  display: flex
+;
+  position: relative;
 }
